[gd_scene load_steps=28 format=3 uid="uid://c5fkee3ubvyvd"]

[ext_resource type="PackedScene" uid="uid://6mo722gvco50" path="res://Actors/Enemys/Templates/EnemyBaseTemplate.tscn" id="1_nx18g"]
[ext_resource type="Script" uid="uid://77pn1mi1bwqa" path="res://Bat.gd" id="2_q52fh"]
[ext_resource type="Texture2D" uid="uid://bdlx6gosn67up" path="res://Sprites/actors/Enemys/small/bat/bat.png" id="3_kxtlt"]
[ext_resource type="Texture2D" uid="uid://0ynwmka8end" path="res://Sprites/actors/Enemys/small/bat/bat2.png" id="4_awakt"]
[ext_resource type="Texture2D" uid="uid://bud0ciyc7qwjn" path="res://Sprites/actors/Enemys/small/bat/bat3.png" id="5_epev5"]
[ext_resource type="Script" uid="uid://bs2i61l25dpft" path="res://Resources/Enemy/Ai/AiTypeKeys_Resrouce.gd" id="6_7sg3r"]
[ext_resource type="Script" uid="uid://bjpdimde5m5yi" path="res://Resources/Enemy/EnemyStats.gd" id="7_nrcht"]
[ext_resource type="Script" uid="uid://ceyynby3qm75a" path="res://Resources/Attack/AttackResource.gd" id="7_sibcj"]
[ext_resource type="PackedScene" uid="uid://q2xttk0jhejq" path="res://Manager/AttackBox.tscn" id="8_tqbtd"]
[ext_resource type="Texture2D" uid="uid://b81tkcbnqcdis" path="res://Sprites/actors/Enemys/small/bat/bat_particle.png" id="9_4w8is"]
[ext_resource type="Shader" uid="uid://cwienuvgbski1" path="res://Actors/player/player.gdshader" id="9_gg1tf"]
[ext_resource type="Texture2D" uid="uid://10cki7mqt6mb" path="res://Sprites/actors/Enemys/small/bat/bat_particle2.png" id="10_mcywg"]
[ext_resource type="Texture2D" uid="uid://gsta6urcksvx" path="res://Sprites/actors/Enemys/small/bat/bat_particle3.png" id="11_m18u0"]

[sub_resource type="Resource" id="Resource_fqdai"]
script = ExtResource("6_7sg3r")

[sub_resource type="Resource" id="Resource_luiws"]
script = ExtResource("6_7sg3r")
key = 1
state = 1

[sub_resource type="Resource" id="Resource_1443f"]
script = ExtResource("6_7sg3r")
key = 2
state = 2

[sub_resource type="Resource" id="Resource_8idiu"]
resource_local_to_scene = true
script = ExtResource("7_sibcj")
damage = 3

[sub_resource type="Resource" id="Resource_7witj"]
resource_local_to_scene = true
script = ExtResource("7_nrcht")
max_health = 2
attack = SubResource("Resource_8idiu")
ai_type_keys = Array[ExtResource("6_7sg3r")]([SubResource("Resource_fqdai"), SubResource("Resource_luiws"), SubResource("Resource_1443f")])
speed = 100.0
max_speed = 200.0

[sub_resource type="Resource" id="Resource_tdo6b"]
script = ExtResource("7_sibcj")
damage = 2

[sub_resource type="Resource" id="Resource_a3kia"]
script = ExtResource("7_nrcht")
max_health = 1
max_Random_health_edit = 1
attack = SubResource("Resource_tdo6b")
speed = 10.0
default_crit_chance = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_32yl0"]
radius = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a2ik0"]
resource_local_to_scene = true
shader = ExtResource("9_gg1tf")
shader_parameter/opacity = 1.0
shader_parameter/r = 1.0
shader_parameter/g = 0.0
shader_parameter/b = 0.0
shader_parameter/mix_color = 0.0

[sub_resource type="Animation" id="Animation_ryi04"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_chyg6"]
resource_name = "flying"
length = 0.500005
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 4, 3, 2, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_61fje"]
_data = {
&"RESET": SubResource("Animation_ryi04"),
&"flying": SubResource("Animation_chyg6")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_sxo5n"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_g3y2r"]
radius = 6.0

[node name="Bat" instance=ExtResource("1_nx18g")]
z_index = 2
script = ExtResource("2_q52fh")
stats = SubResource("Resource_7witj")
stats_upgrades = SubResource("Resource_a3kia")
sprite_variation = Array[Texture2D]([ExtResource("3_kxtlt"), ExtResource("4_awakt"), ExtResource("5_epev5")])
die_particle_variation = Array[Texture2D]([ExtResource("9_4w8is"), ExtResource("10_mcywg"), ExtResource("11_m18u0")])

[node name="CollisionShape2D" parent="Hitbox" index="0"]
visible = false
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_32yl0")

[node name="sprite" parent="." index="1"]
material = SubResource("ShaderMaterial_a2ik0")
texture = ExtResource("3_kxtlt")
hframes = 3
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
libraries = {
&"": SubResource("AnimationLibrary_61fje")
}
autoplay = "flying"

[node name="AttackBox" parent="." index="3" node_paths=PackedStringArray("owner_entity") instance=ExtResource("8_tqbtd")]
owner_entity = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox" index="0"]
visible = false
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_sxo5n")

[node name="Timer" type="Node" parent="." index="4"]

[node name="wander_time" type="Timer" parent="Timer" index="0"]
one_shot = true

[node name="follow_time" type="Timer" parent="Timer" index="1"]
wait_time = 2.0
one_shot = true

[node name="CollisionShape2D" parent="." index="5"]
visible = false
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_g3y2r")

[node name="VisibleOnScreenNotifier2D" parent="." index="7"]
visible = false

[node name="Death" parent="Sounds" index="0"]
min_random_pitch = 2.0
max_random_pitch = 3.0

[connection signal="timeout" from="Timer/wander_time" to="." method="_on_wander_time_timeout"]
